Fixed button overlap on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,8 @@ body {
 
 .background-container {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .gray-theme {
